# finallab2

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: baseline_random0.json  baseline_random0_long.json  baseline_random0_long_seed52.json  baseline_random1.json  baseline_random1_seed71.json  baseline_random1_seed72.json  baseline_random1_seed73.json  baseline_random1_seed76.json  baseline_random1_seed77.json  baseline_random1_seed78.json  baseline_simple.json  baseline_small_corridor.json  baseline_unident_s.json  baseline_unident_s_seed81.json  curriculum_simple_random0.json  distance_shaping_simple.json  multi_layout_curriculum.json  no_shaping_simple.json  partner_conditioned_random1_four_partners.json  partner_conditioned_random1_six_partners_holdout78.json  partner_diversity_random1.json  partner_diversity_random1_three_partners.json  partner_diversity_random1_three_partners_selfplay_mix.json  partner_diversity_simple.json  router_simple_random0.json  small_corridor_delivery_warmstart_from_v3.json  small_corridor_full_chain_3cycle_jitter3_role_balanced_bc_from_v3.json  small_corridor_shaping_v1.json  small_corridor_structured_shaping_v1.json  small_corridor_structured_shaping_v2.json  small_corridor_structured_shaping_v3.json  small_corridor_subtask_router_best_bc_ppo_delivery.json  small_corridor_subtask_router_best_bc_ppo_delivery_alt_holder.json  small_corridor_subtask_router_best_bc_ppo_delivery_ego_holder.json  small_corridor_subtask_router_jitter_bc_delivery.json  smoke.json  (+2 more)
docs/: algorithm_comparison_plan.md  (+5 more)
(+48 files in other folders)
